--- a/src/components/tailus/BrandLogo.astro
+++ b/src/components/tailus/BrandLogo.astro
@@ -3,13 +3,16 @@
 ---
 
 <a href="/" class="flex items-center space-x-2">
-  <div
-    class="w-8 h-8 bg-gradient-to-br from-blue-600 to-purple-600 rounded-lg flex items-center justify-center"
-  >
-    <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 20 20">
-      <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-    </svg>
-  </div>
+  <img
+    src="/images/logo-light.svg"
+    alt="Pixelated Empathy Logo"
+    class="w-8 h-8 dark:hidden"
+  />
+  <img
+    src="/images/logo-dark.svg"
+    alt="Pixelated Empathy Logo"
+    class="w-8 h-8 hidden dark:block"
+  />
   <span class="text-xl font-bold text-gray-900 dark:text-white brand-title">
     Pixelated Empathy
   </span>
